# codepens

./: .eslintrc.json  .gitignore  .htmlhintrc  .index-config.json  .prettierrc  .project_cache.json  .stylelintrc.json  BUILD-README.md  DEVELOPMENT.md  README.md  add-mcp-server.sh  build-index.py  build.js  codepen-stats.py  download-pen.py  import-mcp-config.sh  info.txt  mcp-config-example.json  package.json  requirements.txt  server.js  update-index.sh
ai/roomba/: index.html  script.js  styles.css
challenges/letsScroll/: index.html  styles.css
challenges/range/: index.html  script.js
codepen-cli/: README.md  other.txt  pyproject.toml
codepen-cli/src/: __main__.py
codepen-cli/src/cli/: app_cli.py
codepen-cli/src/core/: formatter.py  monads.py
codepen-cli/test/cli/: app_cli.test.py
crt-tv-animation/: styles.css
fractals/wild-fractals/: index.html  script.js  styles.css
game/game-base/: index.html  script.js  styles.css
game/game-ts/: game.ts  styles.css
other/ngo-nav/: index.html  script.js  styles.css
other/noise-mixer/: index.html  script.js  styles.css
other/room-iso/: script.js  styles.css
other/slide/: index.html  script.js  style.css
other/timeCont/: index.html  script.js  styles.css
other/trihedral-vertex/: index.html  styles.css
public/: control-panel.html  index.html
public/control-panel/: codepen.html  git.html
public/css/: control-panel.css  style.css
public/js/: main.js
scripts/: build-index.py  codepen-stats.py  download-pen.py  update-index.sh
ts_practice/: monad-option.ts  package.json  tsconfig.json
(+189 files in other folders)
